# hexlet-flask-example

./: Makefile  example.py  pyproject.toml
templates/users/: index.html  new.html  show.html
